# lab-camera-optimizer

./: .gitignore  ALGORITHM.md  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  evaluate.py  init_project.py  optimize.py  preview_room.py  pyproject.toml  requirements.txt
configs/: T_zone_direction_change.yaml  demo.yaml  example_evaluation_CHU.yaml
core/: __init__.py  candidates.py  combo_worker.py  config_loader.py  consensus.py  greedy.py  reporting.py  room.py  scoring.py  visualize.py
lab_camera_optimizer/: __init__.py
lab_camera_optimizer/configs/: evaluate_labo_CHU.yaml  example_real_world.yaml  example_simple.yaml  labo_CHU.yaml  labo_CHU_bis.yaml
tests/: conftest.py  test_candidates.py  test_config_loader.py  test_room.py  test_scoring.py
